--- a/doc/src/bugreporting.dox
+++ b/doc/src/bugreporting.dox
@@ -1,6 +1,6 @@
 /*! \page bugreporting How to Report a Bug
 
-Bugs can be entered in the <a href="https://bugs.maemo.org/enter_bug.cgi?classification=Maemo%206%20Tech%20Preview">Maemo Bugzilla</a>.
+Bugs can be entered in the <a href="http://bugs.meego.com/enter_bug.cgi?product=MeeGo%20Touch%20Framework">MeeGo Bugzilla</a>.
 
 Please check Bugzilla for existing bugs that might cover your problem before filing a new one.
 
