--- a/doc/src/credits.dox
+++ b/doc/src/credits.dox
@@ -1,6 +1,6 @@
 /*! \page credits Credits
 
-The following people have contributed code to DirectUI or otherwise helped out. Thank you!
+The following people have contributed code to MeeGo Touch or otherwise helped out. Thank you!
 
 <pre>
 
