--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,10 +1,10 @@
-/*! \page news What's New in DirectUI
+/*! \page news What's New in MeeGo Touch
 
 \section v02027 0.20.27
 
 \subsection New
 - Support for capitalization and italic styling for the font CSS attributes. New syntax goes as follows:
-  "font: family [light|normal|demibold|bold|black] [italic] [mixedcase|uppercase|lowercase|smallcaps|capitalize] size;"
+  "font: family [light|normal|demibold|bold|black] [italic] [mixedcase|uppercase|lowercase|smallcaps|capitalize] size;"
 
 \section v02024 0.20.24
 
