--- a/doc/src/plainqt.dox
+++ b/doc/src/plainqt.dox
@@ -2,23 +2,22 @@
 /*! \page plainqt How to develop Qt applications for Maemo 5 and MeeGo
 
 
-This page covers the case where the author of a Qt application can't make use of the DUI classes in his source code ("libdui"). The recommendations which are made on this page are only made for this specific use case. For native DUI applications  please have a look at the documentation that covers native DUI applications instead.
+This page covers the case where the author of a Qt application can't make use of the MeeGoTouch classes in his source code ("libmeegotouch"). The recommendations which are made on this page are only made for this specific use case. For native Meegotouch applications please have a look at the documentation that covers native applications instead.
 
 \section  intro  Introduction
 
 Qt is a cross platform development framework. So the same source code for a Qt application can be compiled on different operating systems without changes and without any custom code. As a result your application will visually integrate into the given environment no matter whether it's Linux, Windows or Mac OS X.
 
-Of course this is also true for Maemo 5 and MeeGo: So compiling your Qt desktop application on the Maemo plattform will result in an application that will look and feel mostly natively: On Maemo 5 your application will mimic the theming and the habits of applications that are built on top of the Hildon framework. And on MeeGo it will emulate the appearance and the behavior of "native" DirectUI applications.
+Of course this is also true for Maemo 5 and MeeGo: So compiling your Qt desktop application on the Maemo plattform will result in an application that will look and feel mostly natively: On Maemo 5 your application will mimic the theming and the habits of applications that are built on top of the Hildon framework. And on MeeGo it will emulate the appearance and the behavior of "native" MeeGoTouch applications.
 
-However there are several cases where the mobile form factor and the philosophy behind DirectUI should be kept in mind when developing a Qt application that is developed for the Maemo platform. To address these and to guarantee a good experience for your users there are a few recommendations that you should keep in mind.
+However there are several cases where the mobile form factor and the philosophy behind MeeGoTouch should be kept in mind when developing a Qt application that is supposed for the Maemo platform. To address these and to guarantee a good experience for your users there are a few recommendations that you should keep in mind.
 
 \section  style  How Maemo 5 and MeeGo affect the look and feel of your application
-
 
 For both Maemo 5 and MeeGo your Qt application will get adjusted in terms of look and feel so that it will emulate the user interface of each plattform:
 
 - The "Maemo 5" style emulates the appearance of the Gtk-based Hildon framework. The Maemo 5 style is included with the special version of Qt that is shipped together with the N900 device series.
-- The "MeeGo" style mimics the widgets and interaction that is typical for the Qt-based DirectUI framework. The MeeGo style is part of the libdui framework and is shipped as one of its packages.
+- The "MeeGo" style mimics the widgets and interaction that is typical for the Qt-based MeeGoTouch framework. The MeeGoTouch style is part of the libmeegotouch framework and is shipped as one of its packages.
 
 Both styles take theme changes automatically into account. But the style is only an approximation of what a truely native application would look like. So there might be slight differences in terms of look and behaviour compared to a "real" Maemo 5 or MeeGo application. These differences can be reduced by taking into account certain typical requirements of these platforms.
 
@@ -36,6 +35,7 @@ Compared to other Qt styles the Maemo 5 and MeeGo styles go way beyond simple wi
 - Default dialogs (such as the file dialog) are automatically replaced by a Maemo conform replacement.
 - The style provides kinetic scrolling for lists and scroll areas.
 - Scroll bars are only provided as indicators and only appear during scrolling.
+- The style provides orientation change support.
 
 
 In Qt the style can be changed via the command line:
@@ -50,17 +50,68 @@ or
 yourapp -style maemo6
 \endcode
 
-Again note that the Maemo 5 style is only available as a part of the special Qt version that comes with Maemo 5 support. While the MeeGo style is provided via the DUI framework.
+Again note that the Maemo 5 style is only available as a part of the special Qt version that comes with Maemo 5 support. While the MeeGo style is provided via the libmeegotouch framework.
+On both Maemo 5 and MeeGoTouch platform the platform style is used by default for plain Qt applications.
 
 If you want to change this style to a different style then you can either do this via the \c -style command line parameter or in your source code via the \c QStyle API. However in general this is not recommended since the default styles provided with Qt are not finger usable.
 
-If you want to disable styling for your own custom widget then you can do this via the dynamic property \c NoDuiStyle. For a custom widget instance "mywidget" it would look like this:
+\section API MeeGoTouch Qt style API
+
+There is an API to influence the style on MeeGoTouch. This is done via setting dynamic propertys and using litteral strings because we don't wan't to need to include any headers from MeeGoTouch or even link against any Meegotouch library, to keep the plain Qt application independent from the target platform.
+
+If you want to disable styling for your own custom widget then you can do this via the dynamic property \c NoMStyle. For a custom widget instance "mywidget" it would look like this:
 
 \code
-    mywidget->setProperty("NoDuiStyle", true);
+    mywidget->setProperty("NoMStyle", true);
 \endcode
 
 Doing this should only be done if the style renders a certain custom widget unusable. In practice this should stay the rare exception.
+Note: This only disables styling for this particular widget. It does NOT affect children of "mywidget"!
+
+If you get real problems with the style, or want to disable the meegotouch qt style at all for your application, you can set the dynamic property also directliy for QApplication:
+
+\code
+    qApp->setProperty("NoMStyle", true);
+\endcode
+
+With the MeeGoTouch Qt style you can also disable some elements, added by the style, e.g. the statusbar or the navigation bar.
+
+Disableing the statusbar:
+\code
+    qApp->setProperty("NoMStatusBar", true);
+\endcode
+
+Disableing the navigationbar:
+\code
+    qApp->setProperty("NoMNavigationBar", true);
+\endcode
+When disableing the navigation bar your application doesn't habe close and minimize button anymore, so the developer has to care for closing and minimizing the application on its own.
+
+If you want to run a fullscreen application on MeeGoTouch you currently need to disable statusbar and navigationbar this way. Setting any flags to your main window that should make it fullscreen are currently ignored by the style.
+
+The style also provides a basic API for supporting orientation changes on the device. For most QWidget based Qt applications it's difficult to implement an orientation change, but for some cases, e.g. QML oder QGraphicsView based applications it can be usefull. Therfore the orientation change support of the style is opt-in, which means the application needs to tell the style whether it would like support orientation change.
+Note: The orientation change support only adepts the window decorations to the new orientation. For rotating the application's content you have to care on your own!
+
+You can activate the orientation change for your application like this:
+\code
+    QMetaObject::invokeMethod(app.style(), "setOrientationChangeEnabled", Q_ARG(bool, true));
+\endcode
+
+Once the orientation change is enabled, the style sends you a signal, as soon as an orientation change happens. The signal tells you the new orientation in degrees. For reacting on the orientation change simply connect to this signal:
+\code
+    connect(style(), SIGNAL(orientationChanged(int)), this, SLOT(rotateGui(int));
+\endcode
+
+additionally you can always ask the style about its current orientation by calling:
+\code
+    int orientation = 0;
+    QMetaObject::invokeMethod(style(), "orientation", Q_RETURN_ARG(int, orientation));
+\endcode
+
+You can also look at qtstyleorientation demo application which shortly demonstrates how orientation change works.
+
+The orientation change support is not fully implemented yet. It rotates the statusbar and the navigation bar, but menus and dialogs are not getting rotated yet. The development is currently impeeded due to thoughts about useing RandR for orientation change support in MeeGoTouch Qt style might be better.
+
 
 Here are a few screen shots comparing the very same view of the same application on both maemo plattforms:
 
@@ -71,14 +122,14 @@ Here are a few screen shots comparing the very same view of the same application
 
 \section  usability  Achieving a good user experience
 
-The user interface of the Maemo platform is optimized for the specific requirements of  the device and for the needs of your target audience. This results in a user interface that is significantly different from the desktop paradigm.
+The user interface of the Maemo platform is optimized for the specific requirements of the device and for the needs of your target audience. This results in a user interface that is significantly different from the desktop paradigm.
 
 Taking a look at your plain Qt application there are in general two scenarios for deployment:
 
 - You're developing a true crossplatform plain Qt application. Your application uses the very same source code to cover all platforms.
 - Or you're working on a plain Qt application that is specifically optimized for use on the Maemo platform (or on mobile devices in general).
 
-In either case the resulting user experience will most likely not match the quality of a true DirectUI application. Nevertheless there's a set of recommendations we can provide. These recommendations can help you to come at least close and achieve a reasonable good user experience for your application:
+In either case the resulting user experience will most likely not match the quality of a true MeeGoTouch application. Nevertheless there's a set of recommendations we can provide. These recommendations can help you to come at least close and achieve a reasonable good user experience for your application:
 
 
 \subsection taskoriented Create a user interface that is tailored to the user's workflow
@@ -94,7 +145,7 @@ So "streamlining" the UI will not only help you to create a good user experience
 
 The Maemo platform targets devices which are small but have a very high resolution compared to desktop computers. So it's important that inspite of the high resolution it's possible to easily recognize all visual parts of the UI from a reasonable distance.
 For normal ready-made QWidgets (like \c QPushButton, \c QMenu, etc.) the style will take care of this automatically.
-Note that for the styling of widgets we use the properties defined in the DirectUI CSS. Therefore in some cases (like for fonts and geometries) we don't use the properties provided by Qt itself.
+Note that for the styling of widgets we use the properties defined in the MeeGoTouch CSS. Therefore in some cases (like for fonts and geometries) we don't use the properties provided by Qt itself.
 
 For custom widgets and views you should avoid hardcoding sizes whenever possible. Instead it's better to
 
@@ -108,7 +159,7 @@ Toolbars should only contain the most important features that are necessary for 
 
 \subsection fingerusable Ensure that your application stays finger usable
 
-The MeeGo framework allows navigation via the touch of your fingers.
+The MeeGoTouch framework allows navigation via the touch of your fingers.
 This means that you need to carefully think about the size of custom widgets. But it also means that all available functionality needs to be accessible via a "left mouse button click" or gestures.
 In general there are a few common pitfalls which result from the faulty assumption that the user is using a mouse pointer:
 
@@ -118,11 +169,11 @@ In general there are a few common pitfalls which result from the faulty assumpti
 - Touch displays don't support "hovering". So mouse hovering should be avoided as the only way to accessing functionality provided by the application.
 - The Maemo framework usually switches off the cursor ("mouse pointer") of the application. So your application should be usable even if the cursor isn't visible on the screen.
 - There is no concept such as a visible widget focus rect. So you application needs to be intuitively usable without those.
-
+- Don't use your own styling on QWidgets. This means not setting a custom style to the widget, using CSS for the widget or even manipulating the widget's palette. This might be ignored by the Meegotouch Qt style or even break the styling up to making the widget unusable.
 
 \section avoid Things to avoid
 
-There are a few classes which don't get styled in the MeeGo style or look out of place. Please try to avoid these:
+There are a few classes which don't get styled in the MeeGoTouch style or look out of place. Please try to avoid these:
 
 - \c QDial
 - \c QLCDNumber
@@ -162,11 +213,11 @@ There are a few widgets which are specific for the Maemo 5 platform
 
 Use of these widgets is discouraged since they will most likely not be part of the MeeGo platform.
 
-\section  limitations Limitations of the Qt support compared to native DUI applications
+\section  limitations Limitations of the Qt support compared to native MeeGoTouch applications
 
-Since DirectUI and its widgets are based on \c QGraphicsView there are a few things that can't be emulated for plain \c QWidget based widgets. So these are features of DirectUI which can not be supported by the maemo styles:
+Since MeeGoTouch and its widgets are based on \c QGraphicsView there are a few things that can't be emulated for plain \c QWidget based widgets. So these are features of MeeGoTouch which can not be supported by the maemo styles:
 
 - Orientation change for ready-made \c QWidgets (not possible on MeeGo). Orientation change notification for custom widgets can be accessed via the Qt Mobility framework.
-- Ready-made DirectUI widget animations and effects (except for some common ones)
+- Ready-made MeeGoTouch widget animations and effects (except for some common ones)
 */
 
