--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.30~1) unstable; urgency=low
+
+  * [UNRELEASED]
+
+ -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Fri, 23 Jul 2010 10:30:44 +0300
+
 libmeegotouch (0.20.29-1) unstable; urgency=low
 
   * Fixes: NB#181303 - Navigation controls won't come back when hardware keyboard opened.
