--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
 libmeegotouch (0.20.30~1) unstable; urgency=low
 
-  * [UNRELEASED]
+  * Fixes: NB#181556 - The spinner in theme applet does not disappear when the theme change finished
+  * Fixes: MB#4014 - prefix of pc files are statically set to /usr
+  * Fixes: NB#177010 - <MemLeak> mbuttongroup.cpp ,mwarpanimation.cpp
+  * Fixes: NB#180278 - MLabel: The color of the text does not change until the text itself is changed.
 
- -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Fri, 23 Jul 2010 10:30:44 +0300
+ -- Sergiy Dubovik <sergiy.dubovik@nokia.com>  Mon, 26 Jul 2010 14:30:10 +0300
 
 libmeegotouch (0.20.29-1) unstable; urgency=low
 
